--- a/ZhaoYanCommunicationLib/project.properties
+++ b/ZhaoYanCommunicationLib/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
+android.library=true
 android.library.reference.1=../../../workspace_android/appcompat_v7
-android.library.reference.2=../ZhaoYanCommunicationLib
