--- a/ChengYuDaHuiGame/AndroidManifest.xml
+++ b/ChengYuDaHuiGame/AndroidManifest.xml
@@ -46,6 +46,14 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name="com.zhaoyan.juyou.game.chengyudahui.activity.ZhaoYanRegisterPaswordActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.zhaoyan.juyou.game.chengyudahui.activity.ZhaoYanRegisterAccoutInfoActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name="com.zhaoyan.juyou.game.chengyudahui.activity.UserInfoSettingActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
@@ -60,13 +68,11 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-        
         <activity
             android:name="com.zhaoyan.juyou.game.chengyudahui.activity.JiFenMainActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-        
         <activity
             android:name="com.zhaoyan.juyou.game.chengyudahui.activity.GetAppActivity"
             android:screenOrientation="portrait"
@@ -85,10 +91,11 @@
             android:name="com.zhaoyan.juyou.game.chengyudahui.paint.PaintGameActivty"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" />
-         <activity
+        <activity
             android:name="com.zhaoyan.juyou.game.chengyudahui.speakgame.SpeakGameInternet"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" />
+
         <provider
             android:name="com.zhaoyan.juyou.game.chengyudahui.db.ChengyuProvider"
             android:authorities="com.zhaoyan.juyou.game.chengyudahui.db.chengyuprovider"
@@ -100,7 +107,7 @@
             android:exported="false" >
         </provider>
     </application>
-    
+
     <!-- Frontia permission start -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
