--- a/ChengYuDaHuiGame/project.properties
+++ b/ChengYuDaHuiGame/project.properties
@@ -11,7 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=../../../workspace_android/appcompat_v7
-android.library.reference.2=../ZhaoYanCommunicationLib
+target=android-18
+android.library.reference.1=..\\ZhaoYanCommunicationLib
+android.library.reference.2=..\\..\\..\\Codes\\SupportLibraryV7AppCompat
 manifestmerger.enabled=true
