--- a/ChengYuDaHuiGame/AndroidManifest.xml
+++ b/ChengYuDaHuiGame/AndroidManifest.xml
@@ -174,6 +174,11 @@
             android:authorities="com.zhaoyan.juyou.game.chengyudahui.db.historyrovider"
             android:exported="false" >
         </provider>
+         <provider
+            android:name="com.zhaoyan.juyou.game.chengyudahui.knowledge.NoteProvider"
+            android:authorities="com.yuri.notebook.db.notebookproviderrrr"
+            android:exported="false" >
+        </provider>
 
         <!-- baidu push begin -->
         <!-- push应用定义消息receiver声明 -->
