--- a/ChengYuDaHuiGame/AndroidManifest.xml
+++ b/ChengYuDaHuiGame/AndroidManifest.xml
@@ -181,6 +181,11 @@
             android:theme="@style/ActivityTheme" />
         
         <activity
+            android:name="com.zhaoyan.juyou.game.chengyudahui.knowledge.KnowledgeMainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/ActivityTheme" />
+        
+        <activity
             android:name="com.zhaoyan.juyou.game.chengyudahui.activity.BaikeActivity"
             android:screenOrientation="portrait"
             />
