add title & change button style

--- a/ChengYuDaHuiGame/AndroidManifest.xml
+++ b/ChengYuDaHuiGame/AndroidManifest.xml
@@ -179,7 +179,8 @@
         </activity>
         <activity
             android:name="com.zhaoyan.juyou.game.chengyudahui.dictate.DictateActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" 
+            android:theme="@style/ActivityTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.zhaoyan.juyou.game.chengyudahui.activity.MainMenuActivity" />
@@ -194,7 +195,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.zhaoyan.juyou.game.chengyudahui.dictate.DictateMainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" 
+            android:theme="@style/ActivityTheme" />
 
         <provider
             android:name="com.zhaoyan.juyou.game.chengyudahui.db.ZyProvider"
