--- a/ChengYuDaHuiGame/AndroidManifest.xml
+++ b/ChengYuDaHuiGame/AndroidManifest.xml
@@ -78,6 +78,13 @@
                 android:value="com.zhaoyan.juyou.game.chengyudahui.activity.MainMenuActivity" />
         </activity>
         <activity
+            android:name="com.zhaoyan.juyou.game.chengyudahui.activity.ShareAppActivity"
+            android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.zhaoyan.juyou.game.chengyudahui.activity.GetGoldActivity" />
+        </activity>
+        <activity
             android:name="com.zhaoyan.juyou.game.chengyudahui.activity.ZhaoYanAccountSettingActivity"
             android:theme="@style/Theme.Translucent" >
         </activity>
