--- a/ChengYuDaHuiGame/AndroidManifest.xml
+++ b/ChengYuDaHuiGame/AndroidManifest.xml
@@ -240,6 +240,10 @@
             android:name="com.zhaoyan.juyou.game.chengyudahui.dictate.DictateMainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/ActivityTheme" />
+        <activity
+            android:name="com.zhaoyan.juyou.game.chengyudahui.dictate.DictateMainFragmentActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/ActivityTheme" />
 
         <provider
             android:name="com.zhaoyan.juyou.game.chengyudahui.db.ZyProvider"
