--- a/ChengYuDaHuiGame/project.properties
+++ b/ChengYuDaHuiGame/project.properties
@@ -15,3 +15,4 @@ target=android-18
 android.library.reference.1=..\\ZhaoYanCommunicationLib
 android.library.reference.2=..\\..\\..\\Codes\\SupportLibraryV7AppCompat
 manifestmerger.enabled=true
+android.library.reference.3=../ADLib_360
